# oop_lab5

./: .gitignore  CMakeList.txt  CMakeLists.txt
include/: list_2.h  memory_pool.h  queue.h
src/: main.cpp  memory_pool.cpp
tests/: tests.cpp
